| Bug #39059 | push_warning_printf: Warnings are raised as errors | ||
|---|---|---|---|
| Submitted: | 26 Aug 2008 22:15 | Modified: | 11 Sep 2008 19:30 |
| Reporter: | Marc Alff | Email Updates: | |
| Status: | Closed | ||
| Category: | Server: Errors | Severity: | S3 (Non-critical) |
| Version: | OS: | Any | |
| Assigned to: | Marc Alff | Target Version: | 6.0-rc |
| Triage: | D4 (Minor) / R1 (None/Negligible) / E1 (None/Negligible) | ||
[26 Aug 2008 22:15]
Marc Alff
[27 Aug 2008 15:49]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/52750 2807 Marc Alff 2008-08-27 Bug#39059 (push_warning_printf: Warnings are raised as errors) Fixed the calls to push_warning_printf() to not report WARN_LEVEL_ERROR warnings.
[11 Sep 2008 19:30]
Paul DuBois
Noted in 6.0.8 changelog. Some warnings were being reported as errors.
[14 Sep 2008 0:45]
Bugs System
Pushed into 6.0.7-alpha (revid:marc.alff@sun.com-20080827154832-xa4mijbjxxdcxhpj) (version source revid:vvaintroub@mysql.com-20080804094710-jb2qpqxpf2ir2gf3) (pib:3)
