Bug#39059 (push_warning_printf: Warnings are raised as errors)

Fixed the calls to push_warning_printf() to not report WARN_LEVEL_ERROR
warnings.